force-app/main/default/objects/Process__c/fields/ParentProcessId__c.field-meta.xml
<CustomField>
    <fullName>ParentProcessId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentProcessId</label>
    <referenceTo>Process__c</referenceTo>
    <relationshipLabel>Child Processes</relationshipLabel>
    <relationshipName>ChildProcesses</relationshipName>
    <type>Lookup</type>
</CustomField>