force-app/main/default/objects/Process__c/fields/ProcessTemplateId__c.field-meta.xml
<CustomField>
    <fullName>ProcessTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProcessTemplateId</label>
    <referenceTo>Process_Template__c</referenceTo>
    <relationshipLabel>Processes</relationshipLabel>
    <relationshipName>Processes</relationshipName>
    <type>Lookup</type>
</CustomField>