force-app/main/default/objects/Process__c/fields/Steps_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Steps_To_Complete__c</fullName>
    <label>Steps To Complete</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>