force-app/main/default/objects/Process__c/fields/TargetObjectId__c.field-meta.xml
<CustomField>
    <fullName>TargetObjectId__c</fullName>
    <label>TargetObjectId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>