force-app/main/default/objects/Process__c/fields/TargetObjectType__c.field-meta.xml
<CustomField>
    <fullName>TargetObjectType__c</fullName>
    <label>TargetObjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>