force-app/main/default/objects/Process__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>In_Progress_Requirement__c</columns>
    <columns>StepNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>